# batch_stream_openai

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/batch_stream_openai/: __init__.py  batch_stream.py
tests/: __init__.py  conftest.py  test_batch_stream.py
